src/objects/Rank_Group__c.object
<CustomObject>
    <description>Rank Groups that are related to specific Titles</description>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Rank_Name__c</fullName>
        <formula>Rank__r.Rank_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rank Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Rank</inlineHelpText>
        <label>Rank</label>
        <referenceTo>Rank_Codes__c</referenceTo>
        <relationshipLabel>Rank Groups</relationshipLabel>
        <relationshipName>Rank</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Titles__c</fullName>
        <inlineHelpText>Title that Rank is added</inlineHelpText>
        <label>Titles</label>
        <referenceTo>Titles__c</referenceTo>
        <relationshipLabel>Rank Groups</relationshipLabel>
        <relationshipName>Rank_Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Rank Group</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RG-{000}</displayFormat>
        <label>Rank Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rank Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>